# X-lab-workflow-of-Embedded-System

./: CMakeLists.txt  README.md
LED_Blinking_Final/src/: main.cpp
LED_Blinking_Final/test/: X-lab C语言实践.code-workspace
OLED/: platformio.ini
OLED/src/: main.cpp
OLED_Picture/: platformio.ini
OLED_Picture/src/: main.cpp
Serial-Job/src/: main.cpp
Step_Motor_Controll/src/: main.cpp
homeworks/: code of bad_style.c
